<resources>
    <string name="app_name">TvChat</string>
    <string name="enter">Войти:</string>
    <string name="you_can_send_message">Теперь вы можете отправлять сообщения!</string>
    <string name="to_send_message_register">Чтобы отправлять сообщения, зарегестрируйтесь:</string>
    <string name="cancel">Отменить</string>
    <string name="Without_registration_you_can_only_watch">Без регистрации Вы можете только наблюдать</string>
    <string name="feature_not_available">Функция пока не доступна</string>
    <string name="error_ok_auth">Ошибка: Авторизация через Odnoklassniki не прошла.</string>
    <string name="error_general">Ошибка: %1$s</string>

    <string name="add">Add</string>
    <string name="remove">Remove</string>
    <string name="replace">Replace</string>
    <string name="stack">add to Back Stack</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_desc">Navigation header</string>

</resources>
